--- a/config_backup.yaml
+++ b/config_backup.yaml
@@ -1,26 +1,26 @@
 cookie:
   expiry_days: 30
-  key: sympflaura_secret_key_123
-  name: sympflaura_auth_cookie
+  key: testKey
+  name: testName
 credentials:
   usernames:
     jsmith:
       email: jsmith@gmail.com
-      failed_login_attempts: 0
+      failed_login_attempts: 1
       first_name: John
       last_name: Smith
-      logged_in: true
-      password: $2b$12$LZNzmnSBUE2TNkhar.eJG.BSvfS1hExKWdIR2YtT6TywVaZcRb7ii
+      logged_in: false
+      password: $2b$12$vYyyg8U5//lTw1N/4SyXruN3RUT1kzU0sfdWYykN1tPjaPsomLJrq
       roles:
       - admin
       - editor
       - viewer
     rbriggs:
       email: rbriggs@gmail.com
-      failed_login_attempts: 0
+      failed_login_attempts: 4
       first_name: Rebecca
       last_name: Briggs
       logged_in: false
-      password: $2b$12$Hxf/P.A0YyL64Q.7l9GBSudkymmmvBTsNa2CWa0XnsKV0.Cq7XrLK
+      password: $2b$12$bj4CAJ0AP7WfV3WwkMgUveyDj4/2Lt6P.lVvHoLJQSxmeOiqVDgYm
       roles:
       - viewer
