--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ six==1.17.0
 smmap==5.0.2
 stack-data==0.6.3
 streamlit==1.45.0
+streamlit-authenticator==0.4.2
 tenacity==9.1.2
 threadpoolctl==3.6.0
 toml==0.10.2
